# ga_opt_brand

./: .gitignore  jit-sample.py  notes.md  opt_brand.py  pyproject.toml  readData.py  stock.txt  tmp.py
kaizen/: opt_brand.py  plot.py  stock.txt
original/: opt_brand.py  plot.py  readData.py
